--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -1,4 +1,60 @@
 <!DOCTYPE RCC><RCC version="1.0">
+    <qresource prefix="/icons/bitcoinTheme">
+        <file alias="address-book">res/icons/bitcoinTheme/address-book.png</file>
+        <file alias="quit">res/icons/bitcoinTheme/quit.png</file>
+        <file alias="send">res/icons/bitcoinTheme/send.png</file>
+        <file alias="connect_0">res/icons/bitcoinTheme/connect0.png</file>
+        <file alias="connect_1">res/icons/bitcoinTheme/connect1.png</file>
+        <file alias="connect_2">res/icons/bitcoinTheme/connect2.png</file>
+        <file alias="connect_3">res/icons/bitcoinTheme/connect3.png</file>
+        <file alias="connect_4">res/icons/bitcoinTheme/connect4.png</file>
+        <file alias="transaction_0">res/icons/bitcoinTheme/transaction0.png</file>
+        <file alias="transaction_confirmed">res/icons/bitcoinTheme/transaction2.png</file>
+        <file alias="transaction_conflicted">res/icons/bitcoinTheme/transaction_conflicted.png</file>
+        <file alias="transaction_1">res/icons/bitcoinTheme/clock1.png</file>
+        <file alias="transaction_2">res/icons/bitcoinTheme/clock2.png</file>
+        <file alias="transaction_3">res/icons/bitcoinTheme/clock3.png</file>
+        <file alias="transaction_4">res/icons/bitcoinTheme/clock4.png</file>
+        <file alias="transaction_5">res/icons/bitcoinTheme/clock5.png</file>
+        <file alias="eye">res/icons/bitcoinTheme/eye.png</file>
+        <file alias="eye_minus">res/icons/bitcoinTheme/eye_minus.png</file>
+        <file alias="eye_plus">res/icons/bitcoinTheme/eye_plus.png</file>
+        <file alias="options">res/icons/bitcoinTheme/configure.png</file>
+        <file alias="receiving_addresses">res/icons/bitcoinTheme/receive.png</file>
+        <file alias="editpaste">res/icons/bitcoinTheme/editpaste.png</file>
+        <file alias="editcopy">res/icons/bitcoinTheme/editcopy.png</file>
+        <file alias="add">res/icons/bitcoinTheme/add.png</file>
+        <file alias="edit">res/icons/bitcoinTheme/edit.png</file>
+        <file alias="history">res/icons/bitcoinTheme/history.png</file>
+        <!-- Dash -->
+        <file alias="masternodes">res/icons/bitcoinTheme/masternodes.png</file>
+        <!--      -->
+        <file alias="overview">res/icons/bitcoinTheme/overview.png</file>
+        <file alias="export">res/icons/bitcoinTheme/export.png</file>
+        <file alias="synced">res/icons/bitcoinTheme/synced.png</file>
+        <file alias="remove">res/icons/bitcoinTheme/remove.png</file>
+        <file alias="tx_mined">res/icons/bitcoinTheme/tx_mined.png</file>
+        <file alias="tx_input">res/icons/bitcoinTheme/tx_input.png</file>
+        <file alias="tx_output">res/icons/bitcoinTheme/tx_output.png</file>
+        <file alias="tx_inout">res/icons/bitcoinTheme/tx_inout.png</file>
+        <file alias="lock_closed">res/icons/bitcoinTheme/lock_closed.png</file>
+        <file alias="lock_open">res/icons/bitcoinTheme/lock_open.png</file>
+        <file alias="key">res/icons/bitcoinTheme/key.png</file>
+        <file alias="filesave">res/icons/bitcoinTheme/filesave.png</file>
+        <file alias="debugwindow">res/icons/bitcoinTheme/debugwindow.png</file>
+        <file alias="open">res/icons/bitcoinTheme/open.png</file>
+        <file alias="info">res/icons/bitcoinTheme/info.png</file>
+        <file alias="about">res/icons/bitcoinTheme/about_veles.png</file>
+        <file alias="about_qt">res/icons/bitcoinTheme/about_qt.png</file>
+        <file alias="verify">res/icons/bitcoinTheme/verify.png</file>
+        <file alias="fontbigger">res/icons/bitcoinTheme/fontbigger.png</file>
+        <file alias="fontsmaller">res/icons/bitcoinTheme/fontsmaller.png</file>
+        <file alias="transaction_abandoned">res/icons/bitcoinTheme/transaction_abandoned.png</file>
+        <file alias="hd_enabled">res/icons/bitcoinTheme/hd_enabled.png</file>
+        <file alias="hd_disabled">res/icons/bitcoinTheme/hd_disabled.png</file>
+        <file alias="network_disabled">res/icons/bitcoinTheme/network_disabled.png</file>
+        <file alias="proxy">res/icons/bitcoinTheme/proxy.png</file>
+    </qresource>
     <qresource prefix="/icons/lightTheme">
         <file alias="bitcoin">res/icons/lightTheme/veles.png</file>
         <file alias="address-book">res/icons/lightTheme/address-book.png</file>
@@ -218,6 +274,11 @@
         <file alias="spinner-035">res/movies/spinner-035.png</file>
     </qresource>
     <!-- VELES BEGIN -->
+    <qresource prefix="/images/bitcoinTheme">
+        <file alias="splash">res/images/bitcoinTheme/splash.png</file>
+        <file alias="splash_testnet">res/images/bitcoinTheme/splash_testnet.png</file>
+        <file alias="splash_prerelease">res/images/bitcoinTheme/splash_prerelease.png</file>
+    </qresource>
     <qresource prefix="/images/lightTheme">
         <file alias="splash">res/images/lightTheme/splash.png</file>
         <file alias="splash_testnet">res/images/lightTheme/splash_testnet.png</file>
@@ -248,6 +309,7 @@
         <file alias="warning">res/icons/warning.png</file>
     </qresource>
     <qresource prefix="/css">
+        <file alias="bitcoinTheme">res/css/bitcoinTheme.css</file>
         <file alias="darkTheme">res/css/darkTheme.css</file>
         <file alias="lightTheme">res/css/lightTheme.css</file>
         <file alias="velesTheme">res/css/velesTheme.css</file>
